flux/apps/budget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget
  namespace: default
spec:
  selector:
    app: budget
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5006
