flux/apps/budget/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: budget-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`budget.home`)
      kind: Rule
      services:
        - name: budget
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: budget-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`budget.arlodev.co.uk`)
      kind: Rule
      services:
        - name: budget
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: budget-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`budget.arlodev.co.uk`)
      kind: Rule
      services:
        - name: budget
          port: 80
  tls:
    secretName: cert-budget
